--- a/package.json
+++ b/package.json
@@ -42,6 +42,10 @@
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
+    "angular-sanitize": "^1.8.3",
+    "angular-translate": "^2.19.0",
+    "angular-translate-interpolation-messageformat": "^2.19.0",
+    "angular-translate-loader-partial": "^2.19.0",
     "eslint": "^7.6.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
@@ -54,6 +58,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "messageformat": "^2.3.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "typescript": "~4.7.3"
